    - Generate alternative versioned dependency on libnvidia-cfg.so.1 through
      the symbols file.
  * Test that the patches can be applied to the module source (450.66-1).
  * nvidia-kernel-dkms: Ship with unapplied patches and apply the patches
    while building kernel modules (450.66-1).
  * Simplify generating the -source and -dkms packages (450.66-1).
  * Bump watch file version to 4.
  * Bump Standards-Version to 4.5.1. No changes needed.

  [ Vincent Cheng ]
  * Remove myself from Uploaders.

 -- Andreas Beckmann <anbe@debian.org>  Tue, 12 Jan 2021 02:08:48 +0100

nvidia-graphics-drivers (390.141-1) UNRELEASED; urgency=medium

  * New upstream legacy branch release 390.141 (2021-01-07).
    * Fixed CVE-2021-1056.
      https://nvidia.custhelp.com/app/answers/detail/a_id/5142
    - Fixed a driver installation failure on Linux kernel 5.8 release
      candidates, where the NVIDIA kernel module failed to build with error
      "'struct mm_struct' has no member named 'mmap_sem'".
    - Fixed a driver installation failure on Linux kernel 5.8 release
      candidates, where the NVIDIA kernel module failed to build with error
      "too many arguments to function '__vmalloc'".
    * Improved compatibility with recent Linux kernels.

  [ Andreas Beckmann ]
  * Refresh patches.
  * Update glvnd symbols files.
  * Update lintian overrides.

 -- Andreas Beckmann <anbe@debian.org>  Sun, 10 Jan 2021 03:31:58 +0100

nvidia-graphics-drivers (390.138-4) UNRELEASED; urgency=medium

  * Backport drm_prime_pages_to_sg_has_drm_device_arg and get_dma_ops changes
    from 455.45.01 to fix kernel module build for Linux 5.10.

 -- Andreas Beckmann <anbe@debian.org>  Wed, 16 Dec 2020 00:28:48 +0100

nvidia-graphics-drivers (390.138-3) UNRELEASED; urgency=medium

  * Backport get_user_pages_remote, vga_tryget,
    drm_driver_has_gem_free_object, drm_display_mode_has_vrefresh,
    drm_driver_master_set_has_int_return_type and drm_gem_object_put_unlocked